<resources>
    <string name="app_name">OpenBot Controller</string>
    <string name="Indicator_right">Right</string>
    <string name="Indicator_left">Left</string>
    <string name="Indicator_stop">Stop</string>
    <string name="Exit">Exit</string>
    <string name="Noise">Noise</string>
    <string name="Network">Network</string>
    <string name="Drive_mode">Drive Mode</string>
    <string name="reconnect">Search again</string>
    <string name="searching">Searching for OpenBot…</string>
    <string name="hint_connect">Select <b>Phone</b> as control mode in the bot app to connect</string>
    <string name="logs">Logs</string>
    <string name="openbot_icon">OpenBot Icon</string>
    <string name="app_icon">App Icon</string>
    <string name="drive_by_tilting_the_phone">Drive by tilting the phone</string>
    <string name="use_controls_to_drive">Use on-screen controls to drive</string>
    <string name="double_tab_to_go_back">Double-tap to go back to previous screen.</string>
</resources>