<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControllerActivity">

    <org.openbot.controller.customComponents.SplashScreenLayout
        android:id="@+id/splashScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/messages_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:translationZ="2dp">

            <org.openbot.controller.customComponents.BlinkingTextView
                android:id="@+id/connecting_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/searching"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/hint_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_connect"
                android:textSize="24sp" />
        </LinearLayout>

        <org.openbot.controller.customComponents.ExitButton
            android:id="@+id/exitSplash"
            style="@style/IconOnlyButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="30dp"
            android:background="@drawable/button"
            app:icon="@drawable/exit" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:contentDescription="@string/openbot_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/openbot_icon"
            app:tint="#000066" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:contentDescription="@string/app_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_controller"
            app:tint="#000066" />

    </org.openbot.controller.customComponents.SplashScreenLayout>

    <org.openbot.controller.customComponents.MainFrameLayout
        android:id="@+id/mainScreen"
        style="@style/mainStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <FrameLayout
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </FrameLayout>

        <org.openbot.controller.customComponents.DriveModeSlidersLayout
            android:id="@+id/driveModeSlidersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/left_slider"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <org.openbot.controller.customComponents.DualDriveSeekBar
                    android:id="@+id/leftDriveControl"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/sliders_background"
                    android:max="100"
                    android:min="1"
                    android:padding="20dp"
                    android:progress="50"
                    android:progressDrawable="@drawable/seekbar_style"
                    android:thumb="@drawable/custom_thumb" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/right_slider"
                android:layout_toEndOf="@+id/left_slider"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/top_buttons_only"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shaded"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <org.openbot.controller.customComponents.LeftIndicator
                        android:id="@+id/indicatorLeft"
                        style="@style/IconOnlyButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button"
                        app:icon="@drawable/direction_indicator" />

                    <org.openbot.controller.customComponents.StopIndicator
                        android:id="@+id/indicatorStop"
                        style="@style/IconOnlyButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/button"
                        android:gravity="center"
                        app:icon="@drawable/stop_indicator" />

                    <org.openbot.controller.customComponents.RightIndicator
                        android:id="@+id/indicatorRight"
                        style="@style/IconOnlyButton"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/button"
                        android:rotation="180"
                        app:icon="@drawable/direction_indicator" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <org.openbot.controller.customComponents.ConnectionActiveIndicator
                    android:id="@+id/connectionActiveIndicator"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_circle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/video_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/top_buttons"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/left_slider"
                android:orientation="vertical">

                <org.openbot.controller.customComponents.Sound
                    android:id="@+id/sound"
                    style="@style/IconOnlyButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    app:icon="@drawable/volume_off_24" />

                <org.openbot.controller.customComponents.MirrorImage
                    android:id="@+id/mirror_image"
                    style="@style/IconOnlyButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    app:icon="@drawable/toggle_mirror" />

                <org.openbot.controller.customComponents.SwitchCamera
                    android:id="@+id/switch_camera"
                    style="@style/IconOnlyButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    app:icon="@drawable/ic_cameraswitch_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_toStartOf="@+id/right_slider"
                android:background="@drawable/shaded"
                android:orientation="horizontal">

                <org.openbot.controller.customComponents.ExitButton
                    android:id="@+id/exit"
                    style="@style/IconOnlyButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button"
                    app:icon="@drawable/exit" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/right_slider"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <org.openbot.controller.customComponents.DualDriveSeekBar
                    android:id="@+id/rightDriveControl"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/sliders_background"
                    android:max="100"
                    android:min="1"
                    android:padding="20dp"
                    android:progress="50"
                    android:progressDrawable="@drawable/seekbar_style"
                    android:thumb="@drawable/custom_thumb" />

            </LinearLayout>
        </org.openbot.controller.customComponents.DriveModeSlidersLayout>

        <org.openbot.controller.customComponents.DriveModeTiltLayout
            android:id="@+id/controlModeTiltLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/pedals_layout"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <org.openbot.controller.customComponents.Brake
                    android:id="@+id/breakPedal"
                    style="@style/iconWithBorderStyle"
                    android:layout_height="74dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/shade_dark"
                    app:icon="@drawable/pedal_break" />

                <org.openbot.controller.customComponents.Accelerator
                    android:id="@+id/acceleratorPedal"
                    style="@style/iconWithBorderStyle"
                    android:layout_height="wrap_content"
                    android:layout_width="74dp"
                    android:layout_gravity="right"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/shade_dark"
                    app:icon="@drawable/pedal_accelerator" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/tilt_mode_components"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <org.openbot.controller.customComponents.FadeableTextView
                    android:id="@+id/double_tap_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/double_tab_to_go_back"
                    android:textSize="32sp" />
            </LinearLayout>

        </org.openbot.controller.customComponents.DriveModeTiltLayout>

        <org.openbot.controller.customComponents.BotSetupControlsLayout
            android:id="@+id/botSetupButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <org.openbot.controller.customComponents.LogsButton
                    android:id="@+id/logs"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/logs" />

                <org.openbot.controller.customComponents.NoiseButton
                    android:id="@+id/noise"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/Noise" />

                <org.openbot.controller.customComponents.NetworkButton
                    android:id="@+id/network"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/Network" />

                <org.openbot.controller.customComponents.DriveModeButton
                    android:id="@+id/drive_mode"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/Drive_mode" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/control_mode_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/controller_mode_buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <org.openbot.controller.customComponents.ControllerModeSliders
                        android:id="@+id/control_mode_sliders"
                        style="@style/buttonWithBorderStyle"
                        android:layout_margin="20dp"
                        android:text="@string/use_controls_to_drive" />

                    <org.openbot.controller.customComponents.ControllerModeTilt
                        android:id="@+id/control_mode_tilt"
                        style="@style/buttonWithBorderStyle"
                        android:layout_margin="20dp"
                        android:text="@string/drive_by_tilting_the_phone" />

                </LinearLayout>

            </RelativeLayout>

        </org.openbot.controller.customComponents.BotSetupControlsLayout>
    </org.openbot.controller.customComponents.MainFrameLayout>
</FrameLayout>